# sap

./: .gitignore  README.md  cabal.project  default.nix  hs-overlay.nix  pkg.nix  release.nix  sums.cabal
sap/: LICENSE.txt  README.md  pkg.nix  sap.cabal
sap/lib/: Sap.hs
src/: Sums.hs
tests/: Main.hs
