name: sap
version: 0.1
author: Renzo Carbonara
maintainer: renλren!zone
copyright: Renzo Carbonara 2017-2018
license: Apache-2.0
license-file: LICENSE.txt
extra-source-files: README.md CHANGELOG.md
category: Data
build-type: Simple
cabal-version: >=2
synopsis: Sums and products
homepage: https://github.com/k0001/sap
bug-reports: https://github.com/k0001/sap/issues

library
  hs-source-dirs: lib
  default-language: Haskell2010
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2
  exposed-modules: Sap
  build-depends:
    base >=4.9 && <5.0,
    profunctors

